--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my firsrt github repo</title>
-    <link rel="my-frist-repo" href="index.css">
+    <title>my frist repo</title>
 </head>
 <body>
-    <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid harum atque sapiente illo eaque, eos, amet ipsam iusto reprehenderit magnam, ut obcaecati deserunt distinctio omnis possimus dicta in enim pariatur.
-    </p>
-    <ul>
-        <li>mango</li>
-        <li>banaba</li>
-    </ul>
     
 </body>
 </html>
