--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>my frist repo</title>
 </head>
 <body>
-    
+    <p>my first repo</p>
+    <ul>
+        <li>first open</li>
+    </ul>
 </body>
 </html>
