--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my frist repo</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>new opshone</h1>
+    <h4>i can try more & more</h4>
     <p>my first repo</p>
     <ul>
         <li>first open</li>
